<resources>
    <string name="chat_giger_gigs">Chat</string>
    <string name="call_giger_gigs">Call</string>
    <string name="punch_in_giger_gigs">Punch In</string>
    <string name="past_giger_gigs">Past</string>
    <string name="upcoming_giger_gigs">Upcoming</string>
    <string name="punch_out_giger_gigs">Punch Out</string>
    <string name="hours_giger_gigs">hrs</string>
    <string name="mins_giger_gigs">mins</string>
    <string name="no_on_going_gigs_giger_gigs">No Ongoing Gigs</string>
    <string name="on_going_gigs_giger_gigs">Ongoing Gigs</string>
    <string name="no_gigs_present_giger_gigs">No Gigs Present</string>
    <string name="pending_giger_gigs">Pending</string>
    <string name="profile_image_gig_history_giger_gigs">profile image gig history</string>
    <string name="my_gigs_giger_gigs">My Gigs</string>
    <string name="you_ll_soon_be_sent_invites_for_best_gigs_around_for_you_giger_gigs">You\'ll soon be sent invites for best gigs around for you</string>
    <string name="giger_since_giger_gigs">Giger Since</string>
    <string name="gig_id_giger_gigs">Gig Id :</string>
    <string name="please_let_us_know_more_about_your_gig_giger_gigs">Please let us know more about your Gig .</string>
    <string name="okay_text_giger_gigs">Okay</string>
    <string name="no_scheduled_gig_on_this_day_giger_giger_gigs">No scheduled Gig on this Day.</string>
    <string name="no_more_gig_giger_giger_gigs">No more Gig !</string>
    <string name="download_id_card_giger_gigs">Download Id Card</string>
    <string name="plus_see_more_giger_gigs">+ see more</string>
    <string name="back_button_giger_gigs">Back Button</string>
    <string name="okay_giger_gigs">OKAY</string>
    <string name="cancelling_out_a_gig_giger_gigs">Cancelling out a gig !</string>
    <string name="please_let_us_know_your_reason_why_are_you_declining_this_gig_giger_gigs">Please let us know your reason, why are you declining this gig.</string>
    <string name="i_m_on_sick_leave_today_giger_gigs">I’m on sick leave.</string>
    <string name="i_can_t_reach_the_location_today_giger_gigs">I can’t reach the location.</string>
    <string name="this_gig_is_unsuitable_for_me_giger_gigs">This gig is unsuitable for me.</string>
    <string name="others_camel_case_giger_gigs">Others</string>
    <string name="reason_giger_gigs">Reason</string>
    <string name="submit_all_caps_giger_gigs">SUBMIT</string>
    <string name="learning_assign_to_you_giger_gigs">Learning assigned to you</string>
    <string name="plus_see_less_giger_gigs">+ see less</string>
    <string name="explore_by_role_giger_gigs">Explore By Role</string>
    <string name="gigforce_pvt_ltd_giger_gigs">Gigforce Pvt. Ltd.</string>
    <string name="valid_upto_giger_gigs">Valid Upto :</string>
    <string name="issued_on_giger_gigs">Issued On</string>
    <string name="giger_on_sick_leave_today_giger_gigs">Giger on sick leave.</string>
    <string name="giger_can_t_reach_the_location_today_giger_gigs">Giger can’t reach the location.</string>
    <string name="this_gig_is_unsuitable_for_giger_giger_gigs">This gig is unsuitable for giger.</string>
    <string name="i_have_some_personal_work_giger_gigs">I have some personal work.</string>
    <string name="giger_have_some_personal_work_giger_gigs">Giger has some personal work.</string>
    <string name="please_let_us_know_your_reason_why_giger_declining_this_gig_giger_gigs">Please let us know the reason, why are you declining this gig.</string>
    <string name="update_document_picture_giger_gigs">Update Picture</string>
    <string name="remove_document_picture_giger_gigs">Remove Picture</string>
    <string name="document_picture_giger_gigs">Image Option</string>
    <string name="add_login_report_giger_gigs">Add Login Report</string>
    <string name="select_city_to_continue_giger_gigs">Select a city to continue</string>
    <string name="login_report_giger_gigs">Login Report</string>
    <string name="add_details_giger_gigs">Add details</string>
    <string name="edit_login_report_giger_gigs">Edit Login Report</string>
    <string name="select_job_profile_giger_gigs">Select job profile</string>
    <string name="select_job_please_giger_gigs">Select job profile please</string>
    <string name="select_business_giger_gigs">Select business</string>
    <string name="select_business_please_giger_gigs">Select business please</string>
    <string name="select_one_filed_giger_gigs">Select at least one field</string>
    <string name="please_select_atleast_one_field_giger_gigs">Please select at least one field in the form below</string>
    <string name="login_count_greater_giger_gigs">Login count greater than active</string>
    <string name="login_could_be_greater_giger_gigs">Login gigers count cannot be greater than active count</string>
    <string name="absent_greater_giger_gigs">Absent count greater than active</string>
    <string name="absent_gigers_could_greater_giger_gigs">Absent gigers count cannot be greater than active count</string>
    <string name="absent_login_greater_giger_gigs">Absent + Login count greater than active</string>
    <string name="absent_login_could_greater_giger_gigs">Absent and Login gigers count cannot be greater than active count</string>
    <string name="unable_to_submit_giger_gigs">Unable to submit</string>
    <string name="login_summary_giger_gigs">Login Summary</string>
    <string name="edit_login_summary_giger_gigs">Edit Login Summary</string>
    <string name="add_new_login_summary_giger_gigs">Add New Login Summary</string>
    <string name="select_a_city_to_continue_giger_gigs">Select a city to continue</string>
    <string name="done_giger_gigs">Done</string>
    <string name="getting_cities_giger_gigs">getting cities</string>
    <string name="loading_businesses_giger_gigs">Loading businesses</string>
    <string name="error_loading_businesses_giger_gigs">Error loading businesses</string>
    <string name="submitting_data_giger_gigs">Submitting data</string>
    <string name="data_submitted_successfully_giger_gigs">Data submitted successfully</string>
    <string name="data_already_exists_giger_gigs">Data already exists</string>
    <string name="error_submitting_data_giger_gigs">Error submitting data</string>
    <string name="uploading_image_giger_gigs">Uploading Image</string>
    <string name="selfie_geolocation_uploaded_giger_gigs"><![CDATA[Successfully uploaded - Selfie & geolocation]]></string>
    <string name="error_giger_gigs">\"Error \"</string>
    <string name="cant_preview_format_giger_gigs">\"Can\'t preview this format: \"</string>
    <string name="login_giger_gigs">Login</string>
    <string name="absent_giger_gigs">Absent</string>
    <string name="resigned_giger_gigs">Resigned</string>
    <string name="new_onboarding_giger_gigs">New onboarding</string>
    <string name="active_riders_giger_gigs">Active riders/gigers</string>
    <string name="in_training_giger_gigs">In-training</string>
    <string name="new_login_giger_gigs">New login</string>
    <string name="open_positions_giger_gigs">Open positions</string>
    <string name="lineup_for_tomorrow_giger_gigs">Lineup for tomorrow/ Next day</string>
    <string name="expencted_logins_giger_gigs">Expected logins tomorrow/ Next day</string>
    <string name="gig_declined_giger_gigs">Gig Declined</string>
    <string name="unable_to_deline_gig_giger_gigs">\"Unable to decline gig, \"</string>
    <string name="select_the_reason_giger_gigs">Please select the reason</string>
    <string name="early_checkin_giger_gigs">Early Checkin</string>
    <string name="gig_checkin_giger_gigs">Gig Check-in</string>
    <string name="checking_in_early_giger_gigs">You are checking in early for this gig.</string>
    <string name="late_checkin_giger_gigs">Late Checkin</string>
    <string name="your_checkin_giger_gigs">Your Check-in</string>
    <string name="checking_in_late_giger_gigs">You are Checking in late for this Gig. This will be notified to your manager.</string>
    <string name="early_checkout_giger_gigs">Early Checkout</string>
    <string name="gig_checkout_giger_gigs">Gig Check-out</string>
    <string name="checking_out_early_giger_gigs">You are checking out early for this gig.</string>
    <string name="late_checkout_giger_gigs">Late Checkout</string>
    <string name="checking_out_late_notified_giger_gigs">You are Checking out late for this Gig. This will be notified to your manager.</string>
    <string name="user_not_on_app_giger_gigs">Looks like user is not on gig force App</string>
    <string name="unable_to_fetch_user_details_giger_gigs">\"Unable to fetch user details, \"</string>
    <string name="related_learnings_giger_gigs">Related Learnings</string>
    <string name="monthly_giger_gigs">Monthly</string>
    <string name="daily_giger_gigs">Daily</string>
    <string name="under_development_giger_gigs">This feature is under development</string>
    <string name="cannot_decline_past_gigs_giger_gigs">Cannot decline past or ongoing gig</string>
    <string name="activation_code_giger_gigs">\"Activation Code: \"</string>
    <string name="activation_code_copied_giger_gigs">Activation code copied</string>
    <string name="file_downloaded_path_giger_gigs">\"File Downloaded At Path \"</string>
    <string name="gigers_attendance_giger_gigs">Gigers Attendance</string>
    <string name="search_name_giger_gigs">Search Name</string>
    <string name="today_giger_gigs">Today</string>
    <string name="user_marked_absent_giger_gigs">User Marked Absent</string>
    <string name="unable_to_mark_present_giger_gigs">Unable to mark present</string>
    <string name="no_attendance_found_giger_gigs">No Attendance Found</string>
    <string name="no_gigs_assigned_giger_gigs">No Gigs assigned in selected month!</string>
    <string name="image_not_captured_giger_gigs">Image has not been captured</string>
    <string name="checkout_marked_giger_gigs">Checkout Marked.</string>
    <string name="checkin_marked_giger_gigs">Check-in marked</string>
    <string name="error_marking_attendance_giger_gigs">\"Error while marking attendance, \"</string>
    <string name="full_time_giger_gigs">: Full time</string>
    <string name="part_time_giger_gigs">: Part time</string>
    <string name="user_feedback_giger_gigs">\"User feedback : \"</string>
    <string name="late_check_in_giger_gigs">Late Check-in</string>
    <string name="gig_checkin_time_giger_gigs">Gig Checkin Time :</string>
    <string name="your_checkin_time_giger_gigs">Your Checkin Time :</string>
    <string name="change_time_giger_gigs">Change Time</string>
    <string name="overview_giger_gigs">Overview</string>
    <string name="total_present_days_giger_gigs">Total Present Days</string>
    <string name="total_absent_days_giger_gigs">Total Absent Days</string>
    <string name="_0_days_giger_gigs">: 0 days</string>
    <string name="all_giger_gigs">All</string>
    <string name="worked_giger_gigs">Worked</string>
    <string name="off_giger_gigs">Off</string>
    <string name="you_have_successfully_completed_the_gig_giger_gigs">You have successfully completed the Gig</string>
    <string name="estimated_nearnings_giger_gigs">Estimated\nEarnings</string>
    <string name="gig_approval_pending_giger_gigs">Gig approval pending</string>
    <string name="rating_pending_giger_gigs">Rating pending</string>
    <string name="gig_attendance_giger_gigs">Gig Attendance</string>
    <string name="filter_date_text_giger_gigs">Filter by Selection Date</string>
    <string name="filter_date_sub_text_giger_gigs">Please select the filter from the following options.</string>
    <string name="apply_filter_giger_gigs">APPLY FILTER</string>
    <string name="yesterday_giger_gigs">Yesterday</string>
    <string name="three_days_giger_gigs">Last 3 days</string>
    <string name="seven_days_giger_gigs">Last 7 days</string>
    <string name="one_month_giger_gigs">Last 1 month</string>
</resources>