<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_bottom_background_login_summary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/topText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="@dimen/size_40"
                android:fontFamily="@font/lato_bold"
                android:text="@string/filter_date_text_giger_gigs"
                android:textColor="@color/filter_text_color" />

            <TextView
                android:id="@+id/subText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="@dimen/size_20"
                android:text="@string/filter_date_sub_text_giger_gigs"
                android:textColor="@color/filter_text_color" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="10dp"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/todayRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_2"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/today_giger_gigs" />

                <RadioButton
                    android:id="@+id/yesterdayRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginTop="@dimen/size_2"
                    android:text="@string/yesterday_giger_gigs" />

                <RadioButton
                    android:id="@+id/threeDaysRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginTop="@dimen/size_2"
                    android:text="@string/three_days_giger_gigs" />

                <RadioButton
                    android:id="@+id/sevenDaysRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginTop="@dimen/size_2"
                    android:text="@string/seven_days_giger_gigs" />

                <RadioButton
                    android:id="@+id/monthRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_marginTop="@dimen/size_2"
                    android:text="@string/one_month_giger_gigs" />
            </RadioGroup>

            <TextView
                android:id="@+id/applyFilterButton"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="@dimen/size_16"
                android:layout_marginTop="@dimen/size_40"
                android:layout_marginEnd="@dimen/size_16"
                android:background="@drawable/bottom_primary_button_background_giger"
                android:gravity="center"
                android:text="@string/apply_filter_giger_gigs"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>