<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:background="@color/colorAccent"
    android:paddingBottom="12dp">


    <ImageView
        android:id="@+id/gig_type_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
          app:srcCompat="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/gig_type_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato_bold"
        android:letterSpacing="0.02"
        android:text="@string/you_have_successfully_completed_the_gig_giger_gigs"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gig_type_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="90dp"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:letterSpacing="-0.01"
        android:gravity="end"
        android:fontFamily="@font/lato_bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gig_type_label"
        tools:text="100 Rs"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:letterSpacing="-0.01"
        android:gravity="end"
        android:fontFamily="@font/lato"
        app:layout_constraintEnd_toEndOf="@id/amount_tv"
        app:layout_constraintTop_toBottomOf="@id/amount_tv"
        android:text="@string/estimated_nearnings_giger_gigs"
        />

    <View
        android:id="@+id/separator_mid"
        android:layout_width="1dp"
        android:layout_height="84dp"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/gig_type_label"
        app:layout_constraintStart_toEndOf="@id/amount_tv"/>

    <TextView
        android:id="@+id/gig_approval_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gig_approval_pending_giger_gigs"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/gig_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator_mid"/>

    <View
        android:id="@+id/separator_vertical_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/gig_approval_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator_mid"/>

    <TextView
        android:id="@+id/gig_rating_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rating_pending_giger_gigs"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/separator_vertical_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator_mid"/>

    <View
        android:id="@+id/separator_vertical_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/gig_rating_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator_mid"/>

    <TextView
        android:id="@+id/gig_attendance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gig_attendance_giger_gigs"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/separator_vertical_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator_mid"/>



</androidx.constraintlayout.widget.ConstraintLayout>