<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include
        android:id="@+id/attendance_top_bar"
        layout="@layout/fragment_gig_page_2_toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/dateYearTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#333333"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="center"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_16"
        app:layout_constraintTop_toBottomOf="@id/attendance_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Oct 2020"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/attendance_overview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/light_pink"
        app:layout_constraintTop_toBottomOf="@id/dateYearTV">


        <ImageView
            android:id="@+id/calendar_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
              app:srcCompat="@drawable/ic_calendar"/>

        <TextView
            android:id="@+id/overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:letterSpacing="-0.01"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/calendar_iv"
            android:layout_marginStart="8dp"
            android:text="@string/overview_giger_gigs" />


        <TextView
            android:id="@+id/total_days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:letterSpacing="-0.01"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            app:layout_constraintTop_toBottomOf="@id/calendar_iv"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/total_present_days_giger_gigs" />

        <TextView
            android:id="@+id/total_days_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:letterSpacing="-0.01"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintTop_toBottomOf="@id/calendar_iv"
            app:layout_constraintStart_toEndOf="@id/total_days_label"
            android:layout_marginStart="18dp"
            android:text=": 0 days" />

        <TextView
            android:id="@+id/total_working_days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:letterSpacing="-0.01"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            app:layout_constraintTop_toBottomOf="@id/total_days_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/total_absent_days_giger_gigs" />

        <TextView
            android:id="@+id/total_working_days_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:letterSpacing="-0.01"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintTop_toBottomOf="@id/total_days_tv"
            app:layout_constraintStart_toEndOf="@id/total_days_label"
            android:layout_marginStart="18dp"
            android:text="@string/_0_days_giger_gigs" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/attendance_type_chipgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/attendance_overview_layout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/AttendanceSingleChoiceChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_giger_gigs"
            android:fontFamily="@font/lato_bold"
            android:textAlignment="center"
            android:minWidth="82dp"
            app:chipStrokeWidth="1dp"
            android:id="@+id/attendance_all_chip"
            />


        <com.google.android.material.chip.Chip
            style="@style/AttendanceSingleChoiceChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worked_giger_gigs"
            android:fontFamily="@font/lato_bold"
            android:textAlignment="center"
            android:minWidth="82dp"
            app:chipStrokeWidth="1dp"
            android:id="@+id/attendance_present_chip"
            />


        <com.google.android.material.chip.Chip
            style="@style/AttendanceSingleChoiceChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_giger_gigs"
            android:fontFamily="@font/lato_bold"
            android:textAlignment="center"
            android:minWidth="82dp"
            android:id="@+id/attendance_absent_chip"
            app:chipStrokeWidth="1dp" />


    </com.google.android.material.chip.ChipGroup>

    <FrameLayout
        android:id="@+id/attendance_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="170dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/attendance_type_chipgroup"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendance_monthly_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/attendance_montly_progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/attendance_monthly_learning_error"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="16sp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/lipstick"
            app:drawableTopCompat="@drawable/illus_no_attendance"
            android:drawablePadding="20dp"
            tools:text="Unable to load your stuff" />

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>